--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-crewai
-python-dotenv
-requests
-litellm
-google-search-results
+crewai==0.177.0
+python-dotenv==1.1.1
+requests==2.32.5
+litellm==1.74.9
+google_search_results==2.4.2
